--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,9 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[dependencies.ctrlc]
+version = "3.0"
+features = ["termination"]
+
+[dependencies.x25519-dalek]
+version = "0.6"
