New infrastructure: Server, client, parser seperated and imported in binary project.
Improved structure server

--- a/lib/client/Cargo.toml
+++ b/lib/client/Cargo.toml
@@ -1,16 +1,14 @@
 [package]
-name = "rchat"
+name = "rchat-client"
 version = "0.1.0"
 authors = ["Lyr-7D1h <lyr-7d1h@pm.me>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-# [dependencies.x25519-dalek]
-# version = "0.6"
+[dependencies.rchat-parser]
+path='../parser'
 
-[dependencies.rchat-server]
-path = "./lib/server"
-
-[dependencies.rchat-client]
-path = "./lib/client"
+[dependencies.ctrlc]
+version = "3.0"
+features = ["termination"]
