--- a/lib/parser/Cargo.toml
+++ b/lib/parser/Cargo.toml
@@ -1,16 +1,9 @@
 [package]
-name = "rchat"
+name = "rchat-parser"
 version = "0.1.0"
 authors = ["Lyr-7D1h <lyr-7d1h@pm.me>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-# [dependencies.x25519-dalek]
-# version = "0.6"
-
-[dependencies.rchat-server]
-path = "./lib/server"
-
-[dependencies.rchat-client]
-path = "./lib/client"
+[dependencies]
